fix: update contact info

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,4 @@
 # These are supported funding model platforms
 
-github: agi-merge
-patreon: agimerge
-custom: ["https://waggledance.ai", "https://www.paypal.com/pools/c/8Tx8rE17Jm"]
+github: logicblocker
+custom: ["https://github.com/logicblocker", "https://www.paypal.com/pools/c/8Tx8rE17Jm"]
